--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/*Estructura*/
 * {
     padding: 0;
     margin: 0;
@@ -6,41 +7,132 @@
 
 header {
     grid-area: header;
-    background-color: aqua;
+    background-color: rgb(65, 65, 124);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+    border: 1px solid transparent;
+
 }
 
 aside {
     grid-area: aside;
-    background-color: antiquewhite;
+    display: flex;
+    justify-content: center;
+    background-color: rgb(128, 128, 128, 0.2);
+    border: 1px solid transparent;
+
 }
 
 main {
     grid-area: main;
-    background-color: azure;
-}
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto auto;
 
+}
 
 
 footer {
     grid-area: footer;
     background-color: blueviolet;
+    border: 1px solid transparent;
 }
-
-
-.borde {
-    border: 2px solid black;
-
-}
-
-
 
 
 
 body {
     display: grid;
     grid-template-areas:
-        'header header'
-        'aside main'
+        'header header '
+        'aside main '
         'footer footer';
+    grid-template-columns: 1fr 6fr;
+    grid-template-rows: 1 2 1;
 
+}
+
+/*fin estructura*/
+
+/*menu*/
+.Menu {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 1rem;
+
+
+}
+
+.linkmenu {
+    color: black;
+    text-decoration: none;
+}
+
+.ajustecolor {
+    color: rgb(128, 128, 128, 0.7);
+}
+
+
+/*fin menu*/
+
+/*Cards*/
+.contenedor-cards {
+    display: grid;
+    grid-template-columns: 2fr 2fr 2fr;
+    background-color: rgb(128, 128, 128, 0.2);
+    gap: 30px;
+    padding-top: 1em;
+    padding-bottom: 1em;
+
+}
+
+
+.card {
+    display: flex;
+    flex-direction: column;
+    border: solid 1px transparent
+}
+
+.card img {
+
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+
+}
+
+.cardprincipal {
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+    padding: 1rem;
+    border: solid transparent;
+}
+
+
+
+.cardboton {
+    background-color: rgb(65, 65, 124);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+    border: solid transparent;
+    width: 100%;
+    color: white;
+    font-size: 1rem;
+
+}
+
+.cardboton:hover {
+    background-color: rgb(65, 65, 124, 0.8)
+}
+
+.cardboton:focus {
+    background-color: rgba(209, 0, 0, 0.8);
 }
