--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,131 +1,161 @@
-/*Estructura*/
+/*cuerpo*/
 * {
-    padding: 0;
     margin: 0;
+    padding: 0;
     border: 0;
 }
-
-header {
-    grid-area: header;
-    background-color: rgb(65, 65, 124);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 1rem;
-    border: 1px solid transparent;
-
-}
-
-aside {
-    grid-area: aside;
-    display: flex;
-    justify-content: center;
-    background-color: rgb(128, 128, 128, 0.2);
-    border: 1px solid transparent;
-
-}
-
-main {
-    grid-area: main;
-    display: grid;
-    grid-template-columns: auto auto auto;
-    grid-template-rows: auto auto;
-
-}
-
-
-footer {
-    grid-area: footer;
-    background-color: blueviolet;
-    border: 1px solid transparent;
-}
-
-
 
 body {
     display: grid;
     grid-template-areas:
-        'header header '
-        'aside main '
-        'footer footer';
+        'header header header'
+        'aside main main'
+        'footer footer footer';
     grid-template-columns: 1fr 6fr;
-    grid-template-rows: 1 2 1;
+    grid-template-rows: 0.5fr 6fr 0.5fr;
+
+
 
 }
 
-/*fin estructura*/
+header {
+    grid-area: header;
+    padding: 1rem;
+    border: 1px solid transparent;
+    background-color: rgb(65, 65, 124);
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
-/*menu*/
-.Menu {
+
+aside {
+    grid-area: aside;
+    border: 1px solid transparent;
+    background-color: rgb(128, 128, 128, 0.2);
+}
+
+main {
+    grid-area: main;
+    border: 1px solid transparent;
+    background-color: rgb(128, 128, 128, 0.2);
+
+}
+
+footer {
+    grid-area: footer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+    border: 1px solid transparent;
+    background-color: white;
+}
+
+/*fin cuerpo*/
+
+/*contenido header*/
+.titulo {
+    font-size: 2rem;
+    font-weight: 400;
+    width: 60%;
+    color: white;
+}
+
+/*fin contenido header*/
+
+/*condenido aside*/
+.menu {
+
+    height: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.menu-navegador {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    padding: 1rem;
+    padding-top: 15px;
+    padding-left: 5px;
+}
 
-
+.titulo-menu {
+    font-size: 1.5rem;
+    padding-bottom: 1rem;
 }
 
 .linkmenu {
     color: black;
     text-decoration: none;
+    font-size: 1.2rem;
+}
+
+.linkmenu:hover {
+    color: grey;
 }
 
 .ajustecolor {
     color: rgb(128, 128, 128, 0.7);
 }
 
+/* fin condenido aside*/
 
-/*fin menu*/
+/*cards*/
 
-/*Cards*/
+
 .contenedor-cards {
-    display: grid;
-    grid-template-columns: 2fr 2fr 2fr;
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
     background-color: rgb(128, 128, 128, 0.2);
     gap: 30px;
     padding-top: 1em;
     padding-bottom: 1em;
-
+    border: 1px solid transparent;
 }
-
 
 .card {
     display: flex;
     flex-direction: column;
-    border: solid 1px transparent
+    width: 30%;
+    border: 1px solid transparent;
+    background-color: white;
 }
+
 
 .card img {
 
     width: 100%;
     height: 100%;
     background-size: cover;
-
+    border: 1px solid transparent;
 }
 
 .cardprincipal {
-    background-color: white;
+
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    gap: 15px;
     padding: 1rem;
-    border: solid transparent;
-}
+    gap: 10px;
+    font-size: 1rem;
 
+
+}
 
 
 .cardboton {
     background-color: rgb(65, 65, 124);
     display: flex;
     justify-content: center;
-    align-items: center;
     padding: 1rem;
     border: solid transparent;
     width: 100%;
     color: white;
     font-size: 1rem;
+    cursor: pointer;
+
 
 }
 
